2011-04-06  Nick Garnett  <nickg@ecoscentric.com>

	* cdl/cortexm.cdl: Remove M1 CPU family from architecture config
	file (as not supported for now). [Bugzilla 1001186]

2011-04-02  Ilija Kocho  <ilijak@siva.com.mk>
	* cdl/cortexm.cdl: Add M4 CPU family to CYGHWR_HAL_CORTEXM. Add
	FPU (Floating Point Unit) interface.
	* include/hal_io.h: Add CYGHWR_HAL_CORTEXM_M4 to some preprocessor
	conditions. [Bugzilla 1001186]

2011-04-01  Ilija Kocho  <ilijak@siva.com.mk>

	* include/hal_intr.h: Remove double inclusion of var_intr.h
	header and include it at proper place. [ Bugzilla 1001184 ]

2011-02-17  John Dallaway  <john@dallaway.org.uk>

	* include/hal_intr.h (HAL_DISABLE_INTERRUPTS): Mark operand as
	an earlyclobber operand to ensure correct register usage. Issue
	reported by both Ulrich Holeschak and Stanislav Meduna.
	[ Bugzilla 1001154 ]

2011-02-16  Ilija Kocho <ilijak@siva.com.mk>

	* src/cortexm.ld: Added USER_SECTION() macro. [Bugzilla 1001142 ]

2011-01-20  Christophe Coutand  <ccoutand@stmi.com>

	* include/hal_intr.h:
	* cdl/hal_cortexm.cdl:
	Allow variant or platform to define their own RTC clock. Add
	CDL entry to select SysTick clock source. [ Bugzilla 1001090 ]

2010-12-28  Ilija Kocho <ilijak@siva.com.mk>

	* include/hal_io.h: conditional VTOR setting.

2011-01-13  John Dallaway  <john@dallaway.org.uk>

	* src/vectors.S (hal_default_interrupt_vsr): Save interrupt state
	if CYGINT_HAL_COMMON_SAVED_INTERRUPT_STATE_REQUIRED is implemented.
	[ Bugzilla 1001111 ]

2011-01-02  Sergei Gavrikov  <sergei.gavrikov@gmail.com>

	* cdl/hal_cortexm.cdl: Eliminate some warnings. [ Bugzilla
	1001083 ]

2010-05-17  Spencer Oliver <spen@spen-soft.co.uk>

	* include/hal_intr.h (HAL_INTERRUPT_STACK_CALL_PENDING_DSRS):
	* src/hal_misc.c (hal_reset_vsr): Add 0 argument to SWI.

	* src/vectors.S (hal_switch_state_vsr): Eliminate "msr psp,sp",
	which is now deprecated.
	(hal_pendable_svc_vsr): Add 0 argument to SWI.

2009-02-27  Simon Kallweit  <simon.kallweit@intefo.ch>
